# spair-realworld

./: .gitignore  BACKEND_INSTRUCTIONS.md  Cargo.toml  build.sh  index.html  readme.md  test.sh
lib/: Cargo.toml
lib/src/app/: mod.rs
lib/src/app/renders/: footer.rs  header.rs  mod.rs
lib/src/article_editor/: mod.rs  renders.rs
lib/src/article_list/: mod.rs  renders.rs
lib/src/article_viewer/: mod.rs  renders.rs
lib/src/error/: mod.rs
lib/src/home/: mod.rs  renders.rs
lib/src/login/: mod.rs  renders.rs
lib/src/profile/: mod.rs  renders.rs
lib/src/register/: mod.rs  renders.rs
lib/src/settings/: mod.rs  renders.rs
realworld_gloo_net/: Cargo.toml
realworld_gloo_net/src/: lib.rs
realworld_lib/: Cargo.toml
realworld_lib/src/: lib.rs
realworld_lib/src/app/renders/: header.rs
realworld_lib/src/article_list/: mod.rs  renders.rs
realworld_lib/src/article_viewer/: mod.rs
realworld_lib/src/error/: mod.rs
realworld_lib/src/home/: mod.rs  renders.rs
realworld_lib/src/login/: renders.rs
realworld_lib/src/profile/: renders.rs
realworld_lib/src/settings/: mod.rs  renders.rs
realworld_reqwest/: Cargo.toml
realworld_reqwest/src/: lib.rs
realworld_shared/: Cargo.toml
realworld_shared/src/: error.rs  lib.rs
realworld_shared/src/services/: articles.rs  gloo_net.rs  mod.rs  requests.rs  reqwest.rs
services/: Cargo.toml
services/src/: articles.rs  auth.rs  comments.rs  error.rs  gloo_net.rs  lib.rs  profiles.rs  reqwest.rs  tags.rs
src/: app.rs  error.rs  lib.rs  routes.rs  urls.rs
src/app/: footer.rs  header.rs  mod.rs
src/app/renders/: footer.rs  header.rs  mod.rs
src/article_editor/: mod.rs  renders.rs
src/article_list/: mod.rs  renders.rs
src/article_viewer/: mod.rs  renders.rs
src/components/: footer.rs  header.rs
src/error/: mod.rs  render.rs
src/fetch/: home.rs  mod.rs
src/home/: fetch.rs  mod.rs  renders.rs
src/login/: mod.rs  renders.rs
src/pages/: home.rs  mod.rs
src/profile/: mod.rs  renders.rs
src/register/: mod.rs  renders.rs
src/renders/: article_preview.rs  error.rs  footer.rs  header.rs  home.rs  mod.rs
src/settings/: mod.rs  renders.rs
types/: Cargo.toml
types/src/: articles.rs  lib.rs
