[package]
name = "realworld_gloo_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lib = { path = "../lib", features = ["gloo-net"] }
spair = { git = "https://github.com/aclueless/spair" }