[package]
name = "realworld_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pulldown-cmark = "0.8"
thiserror = "1"
derive_more = "0.99"
spair = { path = "../../../spair" }
realworld_shared = { path = "../realworld_shared" }

[features]
gloo-net = ["realworld_shared/gloo-net"]
reqwest = ["realworld_shared/reqwest"]
