[package]
name = "realworld_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
realworld_lib = { path = "../realworld_lib", features = ["reqwest"] }
spair = { path = "../../../spair" }