[package]
name = "realworld_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"], optional = true }
gloo-net = { version = "0.2", optional = true }
dotenvy_macro = "0.15"
thiserror = "1"